# robot_wife

./: .gitignore  README.md
3d_prints/: Hemisphere-Editable_13mm_Inner_Radius_Hemisphere001.stl  Speaker_Box.stl  Switch_holderv2.stl  battery_holder.stl  buck_converter_mount.stl  camera_stand_final_v6-Body.stl  led_boobs.stl  light_diffuser_Sphere.stl  mount_holders.stl  pi_holder.stl  servo_head_connection-Body.stl
3d_prints/macros/: batter_box_robot_wife.FCMacro  boob_led.FCMacro  hemisphere_wife.FCMacro  light_diffuser.FCMacro  rpi_holder.FCMacro  speaker_box.FCMacro  switch_holder.FCMacro  wife_boobs_v2.FCMacro
esp32_bridge/: DOCUMENTATION.md  PINMAP_v3.md  esp32_combined_hardware.cpp  issues.md  platformio.ini  prompt.md  update_vnh7040.txt
esp32_bridge/include/: DebugLog.h  Mcp23017Bus.h  Motor.h  PIDController.h  PanTiltController.h  QuadratureEncoder.h  RobotController.h  WebDashboard.h
esp32_bridge/src/: Mcp23017Bus.cpp  Motor.cpp  PIDController.cpp  PanTiltController.cpp  QuadratureEncoder.cpp  RobotController.cpp  WebDashboard.cpp  main.cpp
from_pi/launcher/: jessica-launcher.service  jessica_launcher.py
from_pi/robot_docs/: documentation.md  gamepad_issues.md  issues.md  original_prompt.md  prompt_tuning.md  tts_offload.md
from_pi/src/camera_publisher/: package.xml  setup.py
from_pi/src/camera_publisher/camera_publisher/: __init__.py  webcam_publisher.py
from_pi/src/camera_publisher/launch/: camera_publisher.launch.py
from_pi/src/esp32_combined_hardware/: CMakeLists.txt  package.xml  plugin.xml
from_pi/src/esp32_combined_hardware/config/: controllers.yaml  joy_button_mappings.yaml
from_pi/src/esp32_combined_hardware/include/esp32_combined_hardware/: esp32_combined_hardware.hpp
from_pi/src/esp32_combined_hardware/src/: esp32_combined_hardware.cpp  joy_button_bridge.cpp
from_pi/src/esp32_servo_hardware/: CMakeLists.txt  package.xml  plugin.xml
from_pi/src/esp32_servo_hardware/include/esp32_servo_hardware/: esp32_servo_hardware.hpp
from_pi/src/esp32_servo_hardware/src/: esp32_servo_hardware.cpp
from_pi/src/jessica_description/description/: dimensions.xacro  inertial_macros.xacro  ros2_control.xacro
from_pi/src/jessica_description/description/meshes/step/: wheel_120.step
from_pi/src/jessica_description/description/meshes/visual/: grid_88_232.stl  robot_front.stl  wheel_120.stl
from_pi/src/jessica_display/: package.xml  setup.cfg  setup.py
from_pi/src/jessica_display/jessica_display/: display_node.py
from_pi/src/jessica_display/launch/: jessica_display.launch.py
from_pi/src/jessica_robot/: documentation.md  motion_and_head_control.md  package.xml  setup.cfg  setup.py
from_pi/src/jessica_robot/config/: gamepad_dinput.yaml  gamepad_xinput.yaml  jessica_controllers.yaml  joy_button_mappings.yaml  joystick.yaml  twist_mux.yaml
from_pi/src/jessica_robot/description/: jessica.urdf.xacro  oldjessica.urdf.xacro
from_pi/src/jessica_robot/jessica_robot/: finger_follower.py  hair_led_node.py  jessica_chatbot.py  pan_tilt_teleop.py  person_follower.py  stop_gesture.py
from_pi/src/jessica_robot/launch/: jessica.launch.py
from_pi/src/jessica_robot/tools/: build_examples.py
from_pi/src/person_state_msgs/: CMakeLists.txt
from_pi/src/person_state_msgs/msg/: PersonState.msg
from_pi/src/tof_publisher/: package.xml  setup.py
from_pi/src/tof_publisher/launch/: tof_publisher.launch.py
from_pi/src/tof_publisher/tof_publisher/: tof_publisher.py
robot_pc_ws/: documentation.md
robot_pc_ws/src/jessica_description/: CMakeLists.txt  package.xml
robot_pc_ws/src/jessica_description/description/: stereo_camera.xacro
robot_pc_ws/src/jessica_description/description/meshes/step/: convert_meshes.py
robot_pc_ws/src/jessica_description/rviz/: display.rviz
robot_pc_ws/src/person_state_msgs/: package.xml
robot_pc_ws/src/person_state_msgs/msg/: HandState.msg  Landmark.msg
robot_pc_ws/src/stereo_pose_publisher/: package.xml  setup.cfg  setup.py
robot_pc_ws/src/stereo_pose_publisher/config/: fisheye_stereo_charuco_calibration_v2.npz
robot_pc_ws/src/stereo_pose_publisher/launch/: stereo_pose.launch.py
robot_pc_ws/src/stereo_pose_publisher/stereo_pose_publisher/: stereo_pose_node.py
test_ws/src/jessica_description/description/: dimensions.xacro  frame.xacro  jessica.urdf.xacro  materials.xacro  pan_tilt.xacro  wheels.xacro
test_ws/src/jessica_description/description/meshes/step/: grid_88_232.step
test_ws/src/jessica_description/description/meshes/visual/: cross_bar_144.stl
test_ws/src/jessica_description/launch/: display.launch.py
test_ws/src/jessica_description/rviz/: display.rviz
text_to_speech/: tts_server.py  whisper_server.py
